# TinyRayTracer

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
include/: Camera.h  Exception.hpp  HitRecord.hpp  Light.h  Material.h  Output.h  Parser.h  Plane.h  Polygon.h  Ray.hpp  Sphere.h  Surface.h  Tracer.h  Triangle.h  Vector3.hpp  World.h
src/: Camera.cpp  Light.cpp  Material.cpp  Output.cpp  Parser.cpp  Plane.cpp  Polygon.cpp  Sphere.cpp  Surface.cpp  Tracer.cpp  Triangle.cpp  World.cpp  main.cpp
