cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

project(TinyRayTracer)

### OUTPUT ###
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)

# Avoid Visual Studio bin/Release and bin/Debug sub directories
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")

set(INCLUDE_DIRS include)
include_directories(${INCLUDE_DIRS})

set(SOURCE_FILES src/main.cpp
				src/Tracer.cpp
				src/Surface.cpp
				src/Sphere.cpp
				src/Plane.cpp
				src/Triangle.cpp
				src/Polygon.cpp
				src/Light.cpp	
				src/Material.cpp			
    )

file(GLOB CURRENT_HEADERS  "include/*.h" "include/*.hpp")
add_executable(tray ${SOURCE_FILES} ${CURRENT_HEADERS})